Added ability to learning other letter